v0.54.0/reference/cli/pixi/workspace/index.md
# `[pixi](../) workspace`

## About

Modify the workspace configuration file through the command line

## Usage

```text
pixi workspace [OPTIONS] <COMMAND>

```

## Subcommands

| Command                                       | Description                                             |
| --------------------------------------------- | ------------------------------------------------------- |
| [`channel`](channel/)                         | Commands to manage workspace channels                   |
| [`description`](description/)                 | Commands to manage workspace description                |
| [`platform`](platform/)                       | Commands to manage workspace platforms                  |
| [`version`](version/)                         | Commands to manage workspace version                    |
| [`environment`](environment/)                 | Commands to manage project environments                 |
| [`export`](export/)                           | Commands to export workspaces to other formats          |
| [`name`](name/)                               | Commands to manage workspace name                       |
| [`system-requirements`](system-requirements/) | Commands to manage workspace system requirements        |
| [`requires-pixi`](requires-pixi/)             | Commands to manage the pixi minimum version requirement |

## Global Options

- [`--manifest-path <MANIFEST_PATH>`](#arg---manifest-path) The path to `pixi.toml`, `pyproject.toml`, or the workspace directory
