v0.66.0/reference/cli/pixi/workspace/index.md
# [pixi](../) workspace

Modify the workspace configuration file through the command line

## Usage

```text
pixi workspace [OPTIONS] <COMMAND>
```

## Subcommands

| Command                                       | Description                                                                             |
| --------------------------------------------- | --------------------------------------------------------------------------------------- |
| [`channel`](channel/)                         | Commands to manage workspace channels                                                   |
| [`description`](description/)                 | Commands to manage workspace description                                                |
| [`platform`](platform/)                       | Commands to manage workspace platforms                                                  |
| [`version`](version/)                         | Commands to manage workspace version                                                    |
| [`environment`](environment/)                 | Commands to manage workspace environments                                               |
| [`feature`](feature/)                         | Commands to manage workspace features                                                   |
| [`export`](export/)                           | Commands to export workspaces to other formats                                          |
| [`name`](name/)                               | Commands to manage workspace name                                                       |
| [`system-requirements`](system-requirements/) | Commands to manage workspace system requirements                                        |
| [`register`](register/)                       | Commands to manage the registry of workspaces. Default command will add a new workspace |
| [`requires-pixi`](requires-pixi/)             | Commands to manage the pixi minimum version requirement                                 |

## Global Options

- [`--manifest-path (-m) <MANIFEST_PATH>`](#arg---manifest-path) : The path to `pixi.toml`, `pyproject.toml`, or the workspace directory
- [`--workspace (-w) <WORKSPACE>`](#arg---workspace) : Name of the workspace
